# LLMops

./: .env.example  .gitignore  .pre-commit-config.yaml  pyproject.toml
lightrag/: Modelfile  main.py
lightrag/data/: data.py
lightrag/model/: __init__.py  base.py  model.py
lightrag/param/: query.py
lightrag/tracker/: token_tracker.py
open-webui/: CODE_OF_CONDUCT.md  Dockerfile  README.md
open-webui/.github/ISSUE_TEMPLATE/: bug_report.yaml
open-webui/backend/open_webui/: config.py
open-webui/backend/open_webui/models/: chats.py
