[project]
name = "llmops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[dependency-groups]
dev = [
    "aiofiles>=24.1.0",
    "fastapi>=0.115.12",
    "jwt>=1.3.1",
    "lightrag-hku>=1.3.6",
    "pre-commit>=4.2.0",
    "uvicorn>=0.34.2",
]
