[project]
name = "llmops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "neo4j>=5.28.1",
    "wcwidth>=0.2.13",
]

[dependency-groups]
dev = [
    "aiofiles>=24.1.0",
    "fastapi>=0.115.12",
    "jwt>=1.3.1",
    "lightrag-hku>=1.3.6",
    "networkx>=3.4.2",
    "ollama>=0.4.8",
    "openai>=1.77.0",
    "pre-commit>=4.2.0",
    "textract>=1.6.5",
    "uvicorn>=0.34.2",
]
